# icicle-emu

./: Cargo.toml  Dockerfile  LICENCE-APACHE  LICENCE-MIT  README.md  rustfmt.toml
.github/workflows/: format.yml  unit_tests.yml
afl-icicle-trace/: Cargo.toml  README.md
afl-icicle-trace/src/: afl.rs  instrumentation.rs  lib.rs  main.rs  shared_mem.rs
icicle-cpu/: Cargo.toml
icicle-cpu/src/: config.rs  cpu.rs  debug_info.rs  elf.rs  exit.rs  lib.rs  pe.rs  regs.rs  trace.rs  utils.rs
icicle-cpu/src/exec/: const_eval.rs  helpers.rs  interpreter.rs  mod.rs
icicle-cpu/src/lifter/: mod.rs  msp430.rs  optimize.rs  pcodeops.rs  rewriter.rs
icicle-fuzzing/: Cargo.toml
icicle-fuzzing/src/: config.rs  lib.rs  linux.rs  log.rs  msp430.rs  trace.rs  utils.rs
icicle-fuzzing/src/instrumentation/: cmp_finder.rs  cmplog.rs  cmplog2.rs  compcov.rs  coverage.rs  mod.rs  timer.rs
icicle-fuzzing/src/msp430/: config.rs  env.rs  hw.rs  mod.rs
icicle-gdb/: Cargo.toml
icicle-gdb/src/: arch.rs  lib.rs  main.rs  stub.rs
icicle-jit/: Cargo.toml
icicle-jit/src/: debug.rs  lib.rs  runtime.rs
icicle-jit/src/translate/: mem.rs  mod.rs  ops.rs
icicle-linux/: Cargo.toml  build.rs
icicle-linux/data/errno/: generic.txt  mips.txt
icicle-linux/data/syscalls/: arm.txt  generic.txt  i386.txt  mips.txt  x64.txt
icicle-linux/src/: errno.rs  lib.rs  types.rs  utils.rs
icicle-linux/src/arch/: aarch64.rs  mips.rs  mod.rs  riscv64.rs  x86.rs
icicle-linux/src/fs/: devices.rs  file.rs  host.rs  mod.rs  socket.rs
icicle-linux/src/sys/: auxv.rs  mod.rs  prctl.rs  syscall.rs
icicle-mem/: Cargo.toml
icicle-mem/src/: lib.rs  mmu.rs  perm.rs  physical.rs  range_map.rs  tests.rs  tlb.rs
icicle-test/: Cargo.toml  README.md
icicle-test/src/: main.rs  parser.rs  tester.rs
icicle-test/tests/: aarch64.ins  arm.ins  fib-static.ins  m68k.ins  mips.ins  mipsel.ins  msp430x.ins  powerpc.ins  riscv32gc.ins  riscv64gc.ins  x64.ins  x86.ins
icicle-test/tests/pcode/: aarch64  arm  m68k  mips  mipsel  msp430x  powerpc  riscv64gc  x64  x86
icicle-vm/: Cargo.toml
icicle-vm/src/: builder.rs  debug.rs  elf_dump.rs  env.rs  hw.rs  injector.rs  lib.rs  msp430.rs  tests.rs
icicle-vm/src/msp430/: config.rs  env.rs  hw.rs  mod.rs
sleigh/pcode/: Cargo.toml
sleigh/pcode/src/: display.rs  helpers.rs  lib.rs  ops.rs
sleigh/sleigh-compile/: Cargo.toml
sleigh/sleigh-compile/src/: ldef.rs  lib.rs  matcher.rs  symbols.rs
sleigh/sleigh-compile/src/constructor/: constraints.rs  disasm_actions.rs  display.rs  mod.rs  semantics.rs
sleigh/sleigh-compile/src/matcher/: cases.rs  mod.rs
sleigh/sleigh-parse/: Cargo.toml  README.md
sleigh/sleigh-parse/src/: ast.rs  error.rs  input.rs  lexer.rs  lib.rs  parser.rs  preprocessor.rs
sleigh/sleigh-parse/src/tests/: mod.rs  parser.rs  preprocessor.rs
sleigh/sleigh-runtime/: Cargo.toml
sleigh/sleigh-runtime/src/: const_eval.rs  debug.rs  decoder.rs  disasm.rs  expr.rs  lib.rs  lifter.rs  matcher.rs  semantics.rs
