[package]
name = "afl-icicle-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bstr = { version = "1.6.0", default-features = false }
icicle-vm = { path = "../icicle-vm" }
icicle-fuzzing = { path = "../icicle-fuzzing" }
icicle-gdb = { path = "../icicle-gdb" }
libc = "0.2.147"
serde_json = "1.0.104"
target-lexicon = "0.12.11"
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_trace"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter", "ansi"] }
pcode = { path = "../sleigh/pcode" }
