[package]
name = "icicle-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
addr2line = "0.20.0"
bitflags = "2.3.3"
icicle-mem = { path = "../icicle-mem" }
pcode = { path = "../sleigh/pcode" }
sleigh-runtime = { path = "../sleigh/sleigh-runtime" }
target-lexicon = "0.12.11"
tracing = { version = "0.1.37", default-features = false }
object = { version = "0.31.1", default-features = false, features = ["read_core", "elf"] }
bytemuck = "1.13.1"
hashbrown = "0.13.2"
half = "2.3.1"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
