[package]
name = "icicle-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
addr2line = "0.21.0"
bitflags = "2.5.0"
icicle-mem = { path = "../icicle-mem" }
pcode = { path = "../sleigh/pcode" }
sleigh-runtime = { path = "../sleigh/sleigh-runtime" }
target-lexicon = "0.12.14"
tracing = { version = "0.1.40", default-features = false }
object = { version = "0.32.2", default-features = false, features = ["read_core", "elf", "pe"] }
bytemuck = "1.15.0"
hashbrown = "0.14.3"
half = "2.4.1"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
