[package]
name = "icicle-fuzzing"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-vm = { path = "../icicle-vm" }
anyhow = { workspace = true }
ahash = { workspace = true }
pcode = { workspace = true }
sleigh-runtime = { workspace = true }
target-lexicon = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
ron = "0.11.0"
bitflags = "2.5.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
crepe = "0.1.8"
indexmap = "2.2.6"
