[package]
name = "icicle-gdb"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-vm = { path = "../icicle-vm" }
anyhow = { workspace = true }
pcode = { workspace = true }
target-lexicon = { workspace = true }
tracing = { workspace = true }
gdbstub = { git = "https://github.com/mchesser/gdbstub/" }
gdbstub_arch = { git = "https://github.com/mchesser/gdbstub/" }
num-traits = "0.2.18"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "tracing-log", "env-filter", "ansi"] }
