[package]
name = "icicle-jit"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
icicle-cpu = { path = "../icicle-cpu" }
pcode = { path = "../sleigh/pcode" }
target-lexicon = "0.12.14"
tracing = { version = "0.1.40", default-features = false }
memoffset = "0.9.1"
cranelift = "0.107.0"
cranelift-native = "0.107.0"
cranelift-module = "0.107.0"
cranelift-jit = "0.107.0"
cranelift-codegen = { version = "0.107.0", default-features = false, features = ["std"] }
wasmtime-jit-debug = { version = "19.0.1", features = ["perf_jitdump"] }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
