[package]
name = "icicle-linux"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bitflags = "2.3.3"
bstr = { version = "1.6.0", default-features = false, features = ["std"] }
bytemuck = "1.13.1"
icicle-cpu = { path = "../icicle-cpu" }
sleigh-runtime = { path = "../sleigh/sleigh-runtime" }
object = { version = "0.31.1", default-features = false, features = ["write", "read_core", "elf"] }
tracing = { version = "0.1.37", default-features = false }
pcode = { path = "../sleigh/pcode" }
target-lexicon = "0.12.11"
