[package]
name = "icicle-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
icicle-vm = { path = "../icicle-vm" }
pcode = { path = "../sleigh/pcode" }
sleigh-runtime = { path = "../sleigh/sleigh-runtime" }
target-lexicon = "0.12.14"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter", "ansi", "tracing-log"] }
