[package]
name = "sleigh-compile"
version = "0.3.0"
edition = "2021"

[dependencies]
sleigh-parse = { path = "../sleigh-parse" }
sleigh-runtime = { path = "../sleigh-runtime" }
pcode = { path = "../pcode" }
serde-xml-rs = { version = "0.6.0", optional = true }
serde = { version = "1.0.197", optional = true }
serde_derive = { version = "1.0.197", optional = true }

[features]
default = ["ldefs"]
# Adds support for loading SLEIGH specifications with the correct context data from `.ldef` files
ldefs = ["dep:serde-xml-rs", "dep:serde", "dep:serde_derive"]
